	 to the full TZX test.
20070926 test/{loop2.tzx,test.c}: add test for bug #1802607 (TZX loop blocks
	 still broken).
20070926 tape.c: fix bug #1802607.
20070926 test/{jump.tzx,test.c}: add test for bug #1802618 (TZX jump blocks
	 broken).
20070926 tape.c: fix bug #1802618.
20070926 test/{complete-tzx.pl,edges.c,test15.c}: add more block types to
	 the full TZX test.
20070926 test/test.c: factor out common code.
20070927 test/{complete-tzx.pl,test15.c}: and more block types to the full
	 TZX test.
20071006 csw.c: use memset() instead of bzero() for consistency (Stuart).
20071007 doc/libspectrum.txt,libspectrum.h.in,rzx.c: add functionality
	 required for updated rzxtool.
20071024 libspectrum.c: fix compilation on MorphOS (part of patch #1774492)
	 (Q-Master).
20071024 libspectrum.c,libspectrum.h.in,sna.c,szx.c,timings.c,z80.c: add
	 Pentagon 512K and Pentagon 1024K support (part of patch #1774492)
	 (Q-Master).
20071026 doc/libspectrum.txt: add Pentagon 512/1024, fix typos (Stuart).
20071026 ChangeLog: fix typos (Stuart).
20071030 csw.c,tape.c: fix writing and reading empty csw files (fixes bug
         #1821425; thanks Stuart Brady) (Fred).
20071101 csw.c,tape.c,tape_block.c,test/test.c: add test for reading empty
         csw files and add more fixes to cope (more for bug #1821425) (Fred).
20071109 tap.c,test/test.c: ensure .tap writing code handles all known block
         types (fixes bug #1828945; thanks, Stuart Brady).
20071112 timings.c: timing tweak for TC2048 and TC2068 based on test programs
         from Phil and Woodster (Fred).
20071124 accessor.pl,snap_accessors.txt,snapshot.c,szx.c,z80.c: add support
         for the +D in z80 and szx snapshots (patch #1782512) (Fred).
20071124 szx.c: fix warnings.
20071125 test/test.c: fix warnings (Stuart).
20071125 tap.c: fix error messages (Stuart).
20071128 ChangeLog: update (Stuart).
20071129 sna.c: fix misleading comment.
20071129 sna.c: sanity check SP before attempting to read from it.