@@ -561,3 +561,6 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20071128 ChangeLog: update (Stuart).
 20071129 sna.c: fix misleading comment.
 20071129 sna.c: sanity check SP before attempting to read from it.
+20071129 tests/{sp-2000.sna.gz,sp-ffff.sna.gz,test.c}: add tests for bugs
+         #1841085 (SP not sanity checked when loading 48K .sna file) and
+         #1841111 (compressed snapshots cause segfault).
